force-app/main/default/objects/Product2/fields/GLBP1_ID_Externo__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_ID_Externo__c</fullName>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>