force-app/main/default/objects/Product2/fields/GLBP1_Tipo_de_venta__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Tipo_de_venta__c</fullName>
    <label>Tipo de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Manual/Digital</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>