force-app/main/default/objects/Product2/fields/vlocity_ins__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>