force-app/main/default/objects/Product2/fields/ZRH_GrupoDeCobertura__c.field-meta.xml
<CustomField>
    <fullName>ZRH_GrupoDeCobertura__c</fullName>
    <label>Grupo de Cobertura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>HOSPITALIZACIONES</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>MATERNIDAD</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>AMBULATORIO</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>DENTAL</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>OTRAS PRESTACIONES</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>VIDA</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>PRESTACIONES EN CONVENIO</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>GRUPO PSIQUIATRIA Y PSICOLOGIA</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>CONV.CLINICA DAVILA/HOSP.CLINICO U.CHILE</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>ONCOLOGIA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>