force-app/main/default/objects/Product2/recordTypes/vlocity_ins__CoverageSpec.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__CoverageSpec</fullName>
    <active>true</active>
    <label>Coverage Spec</label>
</RecordType>