force-app/main/default/objects/Product2/recordTypes/vlocity_ins__InsuredItemSpec.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__InsuredItemSpec</fullName>
    <active>true</active>
    <label>Insured Item Spec</label>
</RecordType>